--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
                         <!-- yunhwa's -->
                         <div class="hi__cuboid">
                             <div class="face face--front">
-                                <p class="hi__word">Fontend</p>
+                                <p class="hi__word">Web</p>
                             </div>
                             <div class="face face--back">
-                                <p class="hi__word">Fontend</p>
+                                <p class="hi__word">Web</p>
                             </div>
                             <div class="face face--top">
-                                <p class="hi__word">Fontend</p>
+                                <p class="hi__word">Web</p>
                             </div>
                             <div class="face face--bottom">
-                                <p class="hi__word">Fontend</p>
+                                <p class="hi__word">Web</p>
                             </div>
                         </div>
                         <!-- fontend -->
@@ -337,7 +337,7 @@
 
                 <!-- project4 -->
                 <div class="project_container">
-                    <h1 class="text" data-img="khobo">KHOBO<span><a href="https://cyh272036.github.io/project4_Ajax/"
+                    <h1 class="text" data-img="khobo">KYOBO<span><a href="https://cyh272036.github.io/project4_Ajax/"
                                 target="_blank">Open
                                 API</a></span></h1>
                     <div class="text-img" data-img-container="khobo">
