--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <h3>Profile</h3>
                 </div>
                 <div class="profile_inner">
-                    <div class="inner_list_me"></div>
+                    <!-- <div class="inner_list_me"></div> -->
                     <div class="list_wrap">
                         <div class="inner_list">
                             <h3>Name</h3>
@@ -182,7 +182,7 @@
                         <div class="inner_list">
                             <h3>Birth</h3>
                             <span>2000.07.20<br>
-                                (23세)
+                                (만 23세)
                             </span>
                         </div>
 
@@ -298,7 +298,7 @@
                         <div class="tech">
                             <span>HTML5</span>
                             <span>CSS3</span>
-                            <span>SCSS</span>
+                            <span>SASS</span>
                             <span>Javascript</span>
                             <span>JQuery</span>
                             <span>JSON</span>
