--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="#"><img src="img/symbol.png" alt="symbol"></a>
             </div>
             <div class="header name">
-                <h4>V.12.2023</h4>
+                <h4>V.01.2024</h4>
                 <p>Portfolio Works</p>
             </div>
             <div class="header nav">
@@ -171,7 +171,7 @@
                     <h3>Profile</h3>
                 </div>
                 <div class="profile_inner">
-                    <!-- <div class="inner_list_me"></div> -->
+                    <div class="inner_list_me"></div>
                     <div class="list_wrap">
                         <div class="inner_list">
                             <h3>Name</h3>
@@ -560,7 +560,7 @@
             본 페이지는 상업적 목적이 아닌<br>
             개인 포트폴리오용으로 제작되었습니다.<br>
 
-            &#169; 2023 CHOI-YUN-HWA. All Rights Reserved.
+            &#169; 2024 CHOI-YUN-HWA. All Rights Reserved.
         </p>
     </section>
 </body>
