--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/Draggable.min.js"></script>
 
     <!-- style/js link -->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="style/index.css">
     <script src="js/index.js"></script>
     <link rel="icon" href="img/favicon.png">
 </head>
@@ -227,36 +227,36 @@
                 </div>
                 <div class="act_inner">
                     <div class="inner_list">
-                        <h3>[2023.11 - ]</h3>
+                        <h3>2023.11 - </h3>
                         <span class="import">코딩자율학습단 5기 참여</span><br>
                     </div>
 
                     <div class="inner_list">
-                        <h3>[2023.05-2023.11]</h3>
+                        <h3>2023.05-2023.11</h3>
                         <span class="import">웹콘텐츠 UX/UI 디자인 & 프론트엔드 개발자 양성과정 수료</span><br>
                     </div>
 
                     <div class="inner_list">
-                        <h3>[2023.01-2023.03]</h3>
+                        <h3>2023.01-2023.04</h3>
                         <span class="import">광고 에이전시 DeNA 인턴십</span><br>
                         <span class="sub">CNP key visual 개발 및 와이드 광고 제작 등</span>
                     </div>
 
                     <div class="inner_list">
-                        <h3>[2022.11]</h3>
+                        <h3>2022.11</h3>
                         <span class="import">한경국립대학교 디자인학과 제26회 졸업작품 전시 참여 </span><br>
                         <span class="sub">브랜드 제작 및 캠페인 아이덴티티 제작</span>
 
                     </div>
 
                     <div class="inner_list">
-                        <h3>[2021.11]</h3>
+                        <h3>2021.11</h3>
                         <span class="import">Data Visualization with P5 워크숍 참여</span><br>
                         <span class="sub">프로그래밍을 활용한 데이터 시각화</span>
                     </div>
 
                     <div class="inner_list">
-                        <h3>[2021.9 - 2021.12]</h3>
+                        <h3>2021.9 - 2021.12</h3>
                         <span class="import">사회적 기업 dALL UD LIFE+ 아이덴티티 제작 및 홈페이지 리뉴얼</span><br>
                         <span class="sub">카페24 플랫폼을 활용한 홈페이지 리뉴얼 작업</span>
                     </div>
@@ -298,7 +298,7 @@
                         <div class="tech">
                             <span>HTML5</span>
                             <span>CSS3</span>
-                            <span>SASS</span>
+                            <span>SCSS</span>
                             <span>Javascript</span>
                             <span>JQuery</span>
                             <span>JSON</span>
@@ -412,6 +412,15 @@
             </div>
 
             <div class="imgbox"></div>
+            <a href="https://drive.google.com/file/d/14qdrvfe8H0O-ZSCgXRFUXXNnUXIGiRMn/view?usp=sharing" target="_blank">
+                <div class="design">
+                    <div class="plus_icon">
+                        <img src="img/more_plus.png" alt="more_plus" class="white">
+                        <img src="img/more_plus_o.png" alt="more_plus_o" class="orange">
+                    </div>
+                    <span class="more_project">see more design projects</span>
+                </div>
+            </a>
         </div>
     </section>
 
@@ -421,7 +430,8 @@
             <div class="index">
                 <div class="inner_headline"><span>작은 점</span>으로 시작해서 <br> 무한한 <span>공간</span>으로 펼쳐나가는</div>
                 <div class="index_inner">
-                    <p> 무한한 가능성을 꿈꾸며 작은 점부터 시작한 저는 다양한 지식을 연결한 입체적인 차원의 모습으로 향해가고 있습니다. 앞으로 더 큰 도전과 배움을 통해 다차원의 능력을 가진 개발자로 성장하겠습니다.</p>
+                    <p> 무한한 가능성을 꿈꾸며 작은 점부터 시작한 저는 다양한 지식을 연결한 입체적인 차원의 모습으로 향해가고 있습니다. 앞으로 더 큰 도전과 배움을 통해 다차원의 능력을 가진
+                        개발자로 성장하겠습니다.</p>
                 </div>
             </div>
 
