--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="#"><img src="img/symbol.png" alt="symbol"></a>
             </div>
             <div class="header name">
-                <h4>V.01.2024</h4>
+                <h4>V.04.2024</h4>
                 <p>Portfolio Works</p>
             </div>
             <div class="header nav">
@@ -158,8 +158,8 @@
     <section class="div s_02" id="slide02">
         <div class="about_wrap">
             <div class="inner">
-                <h1 class="big">Loveing <span>design <br> </span> and <span>
-                        development</span></h1>
+                <h1 class="big"> Developer + Designer
+                        <br>&#10132; <span>YUNHWA CHOI!</span></h1>
                 <h3 class="works">&#8595; Hover for more information &#8595;
                 </h3>
                 <!-- <span>&#169;</span> -->
