--- a/index.html
+++ b/index.html
@@ -157,159 +157,63 @@
     <!-- About Me -->
     <section class="div s_02" id="slide02">
         <div class="about_wrap">
-            <div class="inner">
-                <h1 class="big"> Developer + Designer
-                        <br>&#10132; <span>YUNHWA CHOI!</span></h1>
-                <h3 class="works">&#8595; Hover for more information &#8595;
-                </h3>
-                <!-- <span>&#169;</span> -->
+            <div class="left_thumb">
+                <img src="img/my.jpg" alt="my">
             </div>
-        </div>
-        <div class="box_wrap">
-            <div class="profile">
-                <div class="headline">
-                    <h3>Profile</h3>
+            <div class="right_text">
+                <div class="text_box">
+                    <h1>Profile</h1>
+                    <table>
+                        <tr>
+                            <th>Name</th>
+                            <td>최윤화</td>
+                        </tr>
+                        <tr>
+                            <th>Birth</th>
+                            <td>2000.07.20</td>
+                        </tr>
+                        <tr>
+                            <th>Phone</th>
+                            <td>010-3366-5311</td>
+                        </tr>
+                        <tr>
+                            <th>Mail</th>
+                            <td>cyh272036@gmail.com</td>
+                        </tr>
+                    </table>
                 </div>
-                <div class="profile_inner">
-                    <div class="inner_list_me"></div>
-                    <div class="list_wrap">
-                        <div class="inner_list">
-                            <h3>Name</h3>
-                            <span>최윤화
-                                <br>YUNHWA CHOI</span>
-                        </div>
-
-                        <div class="inner_list">
-                            <h3>Birth</h3>
-                            <span>2000.07.20<br>
-                                (만 23세)
-                            </span>
-                        </div>
-
-                        <div class="inner_list">
-                            <h3>Address</h3>
-                            <span>경기도 수원시</span>
-                        </div>
-
-                        <div class="inner_list">
-                            <h3>MBTI</h3>
-                            <span>용감한 수호자 ISFJ</span>
-                        </div>
-                    </div>
-                    <div class="list_wrap">
-                        <div class="inner_list">
-                            <h3>Education</h3>
-                            <span>국립한경대학교
-                                <br>커뮤니케이션 디자인학과</span>
-                        </div>
-
-                        <div class="inner_list">
-                            <h3>Certificate</h3>
-                            <span>웹디자인기능사
-                                <br>GTQ 1급</span>
-                        </div>
-
-                        <div class="inner_list">
-                            <h3>Phone</h3>
-                            <span>+82 10-3366-5311</span>
-                        </div>
-
-                        <div class="inner_list">
-                            <h3>Email</h3>
-                            <span>cyh272036@gmail.com</span>
-                        </div>
-                    </div>
+                <div class="text_box">
+                    <h1>Education</h1>
+                    <table>
+                        <tr>
+                            <th>2023.02</th>
+                            <td>한경국립대학교 디자인학과 졸업</td>
+                        </tr>
+                        <tr>
+                            <th>2023.11</th>
+                            <td>웹 콘텐츠 UI/UX 디자인 & 프론트엔드 개발 과정 수료</td>
+                        </tr>
+                    </table>
                 </div>
-            </div>
-            <div class="act">
-                <div class="headline">
-                    <h3>Activities</h3>
+                <div class="text_box">
+                    <h1>Certificate</h1>
+                    <table>
+                        <tr>
+                            <th>2023.12</th>
+                            <td>웹디자인기능사</td>
+                        </tr>
+                        <tr>
+                            <th>2023.06</th>
+                            <td>GTQ 1급</td>
+                        </tr>
+                    </table>
                 </div>
-                <div class="act_inner">
-                    <div class="inner_list">
-                        <h3>2023.11 - </h3>
-                        <span class="import">코딩자율학습단 5기 참여</span><br>
-                    </div>
+                <div class="text_box">
 
-                    <div class="inner_list">
-                        <h3>2023.05-2023.11</h3>
-                        <span class="import">웹콘텐츠 UX/UI 디자인 & 프론트엔드 개발자 양성과정 수료</span><br>
-                    </div>
-
-                    <div class="inner_list">
-                        <h3>2023.01-2023.04</h3>
-                        <span class="import">광고 에이전시 DeNA 인턴십</span><br>
-                        <span class="sub">CNP key visual 개발 및 와이드 광고 제작 등</span>
-                    </div>
-
-                    <div class="inner_list">
-                        <h3>2022.11</h3>
-                        <span class="import">한경국립대학교 디자인학과 제26회 졸업작품 전시 참여 </span><br>
-                        <span class="sub">브랜드 제작 및 캠페인 아이덴티티 제작</span>
-
-                    </div>
-
-                    <div class="inner_list">
-                        <h3>2021.11</h3>
-                        <span class="import">Data Visualization with P5 워크숍 참여</span><br>
-                        <span class="sub">프로그래밍을 활용한 데이터 시각화</span>
-                    </div>
-
-                    <div class="inner_list">
-                        <h3>2021.9 - 2021.12</h3>
-                        <span class="import">사회적 기업 dALL UD LIFE+ 아이덴티티 제작 및 홈페이지 리뉴얼</span><br>
-                        <span class="sub">카페24 플랫폼을 활용한 홈페이지 리뉴얼 작업</span>
-                    </div>
-                </div>
-            </div>
-            <div class="develop">
-                <div class="headline">
-                    <h3>Tech Stack</h3>
-                </div>
-                <div class="develop_inner">
-                    <div class="inner_list">
-                        <h3>Design Tech</h3>
-                        <p class="import">
-                            배너 및 디테일 페이지를 제작하기 위한 이미지 편집, 그래픽 및
-                            gif, 영상편집물을 제작하기 위한 컷편집 및 모션그래픽을 제작할 수 있습니다.
-                            또한 콘셉트에 따른 통일성 있는 UI Style Guide를 제시하며 실제 구현 가능하도록 디자인합니다.
-                        </p>
-                        <div class="tech">
-                            <span>Photoshop</span>
-                            <span>Illustrator</span>
-                            <span>Indesign</span>
-                            <span>PremierePro</span>
-                            <span>AfterEffects</span>
-                            <span>XD</span>
-                            <span>Figma</span>
-                        </div>
-                    </div>
-
-
-                    <div class="inner_list">
-                        <h3>Develop Tech</h3>
-                        <p class="import">
-                            웹 표준과 접근성 준수, SEO 최적화를 위해 페이지 구조와 태그의 의미를 고려하며 마크업 하며,
-                            CSS, SCSS 등을 통해 디자인 결과물과 흡사하게 구현해 낼 수 있으며 반응형 웹 제작 가능합니다.
-                            애니메이션 및 기타 동적 요소를 웹페이지에 담아낼 수 있으며,
-                            협업을 위해 재활용과 유지보수가 쉬운 코드를 짤 수 있도록 끊임없이 연구합니다.
-
-                        </p>
-                        <div class="tech">
-                            <span>HTML5</span>
-                            <span>CSS3</span>
-                            <span>SCSS</span>
-                            <span>Javascript</span>
-                            <span>JQuery</span>
-                            <span>JSON</span>
-                            <span>AJAX</span>
-                            <span>React</span>
-                            <span>Bootstrap</span>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
+
     </section>
 
     <!-- Project -->
