--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <!-- About Me -->
     <section class="div s_02" id="slide02">
-        <div class="about_wrap">
+        <!-- <div class="about_wrap">
             <div class="left_thumb">
                 <img src="img/my.jpg" alt="my">
             </div>
@@ -212,7 +212,7 @@
 
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </section>
 
